Test Plan File added! Master and Replica database connection pooling configuration

--- a/comment-service/src/main/resources/application.properties
+++ b/comment-service/src/main/resources/application.properties
@@ -14,12 +14,27 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-#HikariCP connection pool configuration
-spring.datasource.hikari.pool-name=comment-pool
-spring.datasource.hikari.pool-size=10
-spring.datasource.hikari.connection-timeout=3000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
+#HikariCP connection pool configuration for read replicas
+spring.datasource.replica.hikari.pool-name=comment-replica-pool
+spring.datasource.replica.hikari.maximum-pool-size=50
+spring.datasource.replica.hikari.connection-timeout=10000
+spring.datasource.replica.hikari.idle-timeout=600000
+spring.datasource.replica.hikari.minimum-idle=10
+spring.datasource.replica.hikari.max-lifetime=1800000
+spring.datasource.replica.hikari.auto-commit=true
+spring.datasource.replica.hikari.read-only=true
+
+#Hikari CP Connection Pool Configuration for master
+spring.datasource.master.hikari.pool-name=comment-master-pool
+spring.datasource.master.hikari.maximum-pool-size=10
+spring.datasource.master.hikari.minimum-idle=5
+spring.datasource.master.hikari.idle-timeout=600000
+spring.datasource.master.hikari.connection-timeout=20000
+spring.datasource.master.hikari.auto-commit=false
+
+
+
+
 
 #-----PostgreSQL connection configuration-----
 
